--- a/uilibrary/src/main/res/values/attrs.xml
+++ b/uilibrary/src/main/res/values/attrs.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <declare-styleable name="AbstractTextView">
+        <attr name="sizeText" format="dimension"/>
+    </declare-styleable>
+
     <declare-styleable name="Legend">
         <attr name="titleText" format="string" localization="suggested" />
         <attr name="numberOfColumns" format="integer" />
