- add a setting (number of digits after dot), enabled or disabled by the choice of format value - add some animations to the MainActivity - move some initialization code from MainActivity to SMSAnalyserActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#43cb7e</color>
     <color name="color_received">#cd5454</color>
     <color name="color_sent">#4385cb</color>
+    <color name="transparent">#96777676</color>
 </resources>
