--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main"/>
+    <include layout="@layout/menu_expanded"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
